Upgrade htmlcleaner to version 2.22.
It doesn't seem to crash on fight handling, so there is that at least.

git-svn-id: http://svn.code.sf.net/p/kolmafia/code@19349 b29ace70-8910-0410-8dcc-aa2fc6433167